[SDK-190]: Updated README with extra command to use when running the example project with Java 9